--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
   - sudo pip install coveralls
 script:
   - sudo python bobobot.py -h
-  - sudo python bobobot.py -B TELEGRAM.BOT.TOKEN -V
+  - sudo python bobobot.py -B BOTTOKEN -V
 after_success:
   - sudo coverage bobby.py -h
   - coveralls
